--- a/graded-assignments/course02/module02/todolists/Gemfile
+++ b/graded-assignments/course02/module02/todolists/Gemfile
@@ -24,7 +24,7 @@ gem 'jbuilder', '~> 2.0'
 gem 'sdoc', '~> 0.4.0', group: :doc
 
 # Use ActiveModel has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
+gem 'bcrypt', '~> 3.1.7'
 
 # Use Unicorn as the app server
 # gem 'unicorn'
@@ -46,5 +46,7 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 group :test do
  gem 'rspec-rails', '~> 3.0'
+ gem 'capybara'
 end
 
+gem 'will_paginate', '~> 3.0.6'
